--- a/src/components/formRow/formRow.scss
+++ b/src/components/formRow/formRow.scss
@@ -114,7 +114,7 @@
   }
 
   input[type=date] {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Trenda', sans-serif;
   }
 
   input[type=checkbox] {
