--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
+@import "common/styles/fonts/trenda";//url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
 @import "common/styles";
 @import "common/styles/vars";
 @import "common/styles/functions";
@@ -18,7 +18,7 @@ body {
   text-align: left;
   width: 100%;
   height: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Trenda', sans-serif;
   font-size: 16px;
   color: v(appText, #333);
   padding: 0;
