Made button labels and styles more configurable.
Not all button texts and colors where customizable, so I added some vars
to make them customizable.
See README.md changes for further details.

--- a/src/components/formPopup/formPopup.scss
+++ b/src/components/formPopup/formPopup.scss
@@ -1,3 +1,5 @@
+@import '../../common/styles//functions.scss';
+
 .form-popup {
   .popup-content {
     width: 90%;
@@ -35,6 +37,8 @@
         padding: 7px 15px;
         text-transform: uppercase;
         font-weight: 400;
+        background-color: v(submitButtonBackground, "green");
+        color: v(submitButtonText, "#000000");
       }
     }
   }
