--- a/src/components/page/page.scss
+++ b/src/components/page/page.scss
@@ -1,3 +1,5 @@
+@import '../../common/styles/functions';
+
 .app-page {
   flex: 1;
   display: flex;
@@ -24,6 +26,12 @@
   .add-item {
     font-size: 18px;
     padding: 12px 30px;
+    background-color: v(addButtonBackground, #1cb841);
+    color: v(addButtonText, #ffffff);
+
+    &:hover {
+      background-color: v(addButtonHoverBackground, lighten(#1cb841, 10%));
+    }
 
     @media screen and (max-width: 800px) { 
       margin-top: 15px;
